--- a/style.css
+++ b/style.css
@@ -3,3 +3,42 @@ body {
   height: 100%;
   margin: 0;
 }
+
+h1  {
+  text-align: center;
+}
+
+.div0 {
+  text-align: center;
+}
+
+.div-1  {
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: gray;
+}
+
+.div-2  {
+  font-size: smaller;
+  text-align: center;
+}
+
+.div-3  {
+  width: 800px;
+}
+
+div {
+  float: left;
+  background-color: red;
+  width: 25%;
+}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#details  {
+  text-align: center;
+}
